force-app/main/default/objects/Current_Pending_Promotions__c/Current_Pending_Promotions__c.object-meta.xml
<CustomObject>
    <label>Current/Pending Promotions</label>
    <nameField>
        <label>Current/Available Promotions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Current/Pending Promotionss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>