force-app/main/default/objects/Current_Pending_Promotions__c/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <label>Auto Renewal</label>
    <length>25</length>
    <type>Text</type>
</CustomField>