force-app/main/default/objects/Current_Pending_Promotions__c/fields/Billing_Seq_No__c.field-meta.xml
<CustomField>
    <fullName>Billing_Seq_No__c</fullName>
    <label>Billing Sequence Number</label>
    <length>1</length>
    <type>Text</type>
</CustomField>