force-app/main/default/objects/Current_Pending_Promotions__c/fields/Cancel_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Amount__c</fullName>
    <label>Cancel Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>