force-app/main/default/objects/Current_Pending_Promotions__c/fields/Credit_END__c.field-meta.xml
<CustomField>
    <fullName>Credit_END__c</fullName>
    <label>Credit END</label>
    <type>Date</type>
</CustomField>