force-app/main/default/objects/Current_Pending_Promotions__c/fields/DISC_ITEM__c.field-meta.xml
<CustomField>
    <fullName>DISC_ITEM__c</fullName>
    <label>DISC ITEM</label>
    <length>25</length>
    <type>Text</type>
</CustomField>