force-app/main/default/objects/Current_Pending_Promotions__c/fields/library_Id__c.field-meta.xml
<CustomField>
    <fullName>library_Id__c</fullName>
    <label>Library Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>