force-app/main/default/objects/Current_Pending_Promotions__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <label>Order Item</label>
    <length>25</length>
    <type>Text</type>
</CustomField>