force-app/main/default/objects/Current_Pending_Promotions__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <label>Override</label>
    <length>10</length>
    <type>Text</type>
</CustomField>