force-app/main/default/objects/Current_Pending_Promotions__c/fields/Pr_Contr_StrtDte__c.field-meta.xml
<CustomField>
    <fullName>Pr_Contr_StrtDte__c</fullName>
    <label>Promo/Contr StartDate</label>
    <type>Date</type>
</CustomField>