force-app/main/default/objects/Current_Pending_Promotions__c/fields/Pr_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Pr_Exp_Date__c</fullName>
    <label>Promo Exp Date</label>
    <type>Date</type>
</CustomField>