force-app/main/default/objects/Current_Pending_Promotions__c/fields/Pr_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Pr_Sequence__c</fullName>
    <label>Promo Sequence</label>
    <length>25</length>
    <type>Text</type>
</CustomField>