force-app/main/default/objects/Current_Pending_Promotions__c/fields/Promo_ID__c.field-meta.xml
<CustomField>
    <fullName>Promo_ID__c</fullName>
    <label>Promo ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>