force-app/main/default/objects/Current_Pending_Promotions__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion</label>
    <length>60</length>
    <type>Text</type>
</CustomField>