force-app/main/default/objects/Current_Pending_Promotions__c/fields/Promotion_Key__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Key__c</fullName>
    <label>Promotion Key</label>
    <length>25</length>
    <type>Text</type>
</CustomField>